testsuite/poke.pkl/ass-diag-3.pk
/* { dg-do compile } */

defun foo = void:
  {
   [1,2,3] = [4,5,6];  /* { dg-error "" } */
  }
